[project]
name = "temporal-activity-cache"
version = "0.1.0"
description = "Prefect-style activity caching for Temporal workflows using Redis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "temporalio>=1.8.0",
    "redis[hiredis]>=5.0.0",
    "pydantic>=2.0.0",
]


[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.10.7",
    "fakeredis[lua]>=2.31.3",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.3",
]
